# options-pricing-engine-statarb

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
arb_scanner/: __init__.py  scanner.py
arb_scanner/detectors/: __init__.py
arb_scanner/execution/: __init__.py
benchmarks/accuracy/: __init__.py
benchmarks/latency/: __init__.py
bindings/: __init__.py
engine_core/: __init__.py
engine_core/greeks/: __init__.py
engine_core/numba/: __init__.py
engine_core/pricing/: __init__.py  binomial.py  black_scholes.py  monte_carlo.py
iv_solver/: __init__.py  solver.py
market_data/: __init__.py
market_data/adapters/: __init__.py
market_data/synthetic/: __init__.py
risk/: __init__.py
risk/limits/: __init__.py
surface/: __init__.py
surface/calibration/: __init__.py
surface/interpolation/: __init__.py
surface/models/: __init__.py  svi.py
tests/unit/: test_pricing.py
