[build-system]
requires = ["setuptools>=68.0", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "options-pricing-engine"
version = "1.0.0"
description = "High-performance options pricing engine with statistical arbitrage detection"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Vipul", email = "vipul.quant@gmail.com"}]
keywords = ["options", "pricing", "black-scholes", "greeks", "volatility", "arbitrage", "quantitative-finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "numba>=0.58.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-benchmark>=4.0.0", "hypothesis>=6.92.0", "black>=24.1.0", "mypy>=1.8.0"]
quantlib = ["QuantLib>=1.31"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
